# RemoteDiscHealthMonitor

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake.yml
src/: CMakeLists.txt  main.cpp
src/agent/: AgentStatus.cpp  AgentStatus.h  CMakeLists.txt  Disc.cpp  Disc.h  DiscStatusCalculator.cpp  DiscStatusCalculator.h  Disk.cpp  Disk.h  GeneralAnalyzer.cpp  GeneralAnalyzer.h  HealthChecker.cpp  HealthChecker.h  IDiscCollector.h  IProbe.h  ISmartReader.h  LinuxSmartReader.cpp  LinuxSmartReader.h  Server.cpp  Server.h  SmartAnalyzer.cpp  SmartAnalyzer.h  SmartReader.cpp  SmartReader.h  SmartReaderFactory.cpp  SmartReaderFactory.h  SystemUtilitiesFactory.h  WMICommunication.cpp  WMICommunication.h  WinGeneralAnalyzer.cpp  WinGeneralAnalyzer.h  WindowsSmartReader.cpp  WindowsSmartReader.h  main.cpp
src/agent/linux/: DmesgParser.cpp  DmesgParser.h  IPartitionsManager.h  LinGeneralAnalyzer.cpp  LinGeneralAnalyzer.h  LinSmartAnalyzer.h  LinSystemUtilitiesFactory.cpp  LinuxDiskCollector.cpp  LinuxDiskCollector.h  LinuxSmartReader.cpp  LinuxSmartReader.h  LsblkOutputParser.cpp  LsblkOutputParser.h  SmartCtlOutputParser.cpp  SmartCtlOutputParser.h
src/agent/windows/: CMDCommunication.cpp  CMDCommunication.h  WMICommunication.cpp  WMICommunication.h  WinDiscCollector.cpp  WinDiscCollector.h  WinDiskCollector.cpp  WinDiskCollector.h  WinGeneralAnalyzer.cpp  WinGeneralAnalyzer.h  WinSmartAnalyzer.cpp  WinSmartAnalyzer.h  WinSystemUtilitiesFactory.cpp  WindowsSmartReader.cpp
src/common/: AgentStatus.rep  CMakeLists.txt  DiskInfo.cpp  DiskInfo.h  DiskInfoSerialize.h  GeneralHealth.cpp  GeneralHealth.h  Health.h  OutputParsersUtils.cpp  OutputParsersUtils.h  ProbeStatus.h  ProbeStatusSerialize.h  ProtocolVersion.h  SmartData.cpp  SmartData.h  SmartDataSerialize.h  constants.hpp
src/monitor/: ActiveAgentsList.cpp  ActiveAgentsList.hpp  AgentInformation.cpp  AgentInformation.hpp  AgentStatusFetcher.cpp  AgentStatusFetcher.hpp  AgentsEnumerator.cpp  AgentsEnumerator.hpp  AgentsExplorer.cpp  AgentsList.cpp  AgentsList.hpp  AgentsStatusProvider.cpp  AgentsStatusProvider.hpp  CMakeLists.txt  Configuration.cpp  Configuration.hpp  IAgentsStatusProvider.hpp  ManualAgentsValidator.cpp  ManualAgentsValidator.hpp  main.cpp
src/monitor/Qml/: AgentDelegate.qml  AgentsView.qml  Confirmation.qml  DeletionItem.qml  ImageButton.qml  MainWindow.qml  resources.qrc
src/monitor/images/: images.qrc
tests/: CMakeLists.txt  sample_test.cpp
tests/agent/: CMakeLists.txt  DiscStatusCalculatorTests.cpp  DiskMock.h  DmesgParserTests.cpp  IPartitionsManagerMock.h  IProbeMock.h  LsblkOutputParserTests.cpp  SmartCtlOutputParserTests.cpp
tests/common/: CMakeLists.txt  ProbeStatusTests.cpp
tests/monitor/: ActiveAgentsListTests.cpp  AgentsListTests.cpp  CMakeLists.txt  IAgentsStatusProviderMock.hpp
